src/sass/main.scss
$port-border: #494C4E;
$orange: #F5C453;
$margin-small: 1em;
$margin-medium: 1.5em;
$padding-small: 1em;
$padding-medium: 1.5em;
$padding-large: 3em;
html {
    font-size: 62.5%;
    font-family: "adriane", Georgia, serif;
    color: #494C4E;
}

body {
    border: 8px solid $port-border;
    margin: 0;
}

h1 {
    font-size: 3em;
    line-height: 1.5em;
    margin: $margin-small;
}

h3 {
    font-size: 2em;
    line-height: 1em;
    margin-bottom: $margin-medium;
}

h3,
h4 {
    font-family: "franklin-gothic-urw-cond", Arial, sans-serif;
    font-weight: 700;
}

h4 {
    font-size: 1.35em;
    line-height: 1em;
    margin-bottom: 1.25em;
    color: $orange;
    text-transform: uppercase;
}

p {
    font-size: 1.5em;
    line-height: 2em;
    margin-bottom: $margin-medium;
}

nav a,
.home-links a {
    color: #494C4E;
    text-decoration: none;
    &:hover {
        border-bottom: 2px solid $orange;
        opacity: 1;
    }
}

nav {
    padding-top: 1.5em;
    padding-bottom: 1.5em;
    li {
        list-style-type: none;
    }
}

.nav-link a {
    font-size: 1.5em;
}

.main-nav {
    display: flex;
    align-items: center;
    justify-content: space-around;
    .logo {
        flex-grow: .5;
    }
    img {
        padding: 2px;
        border: 3px solid $port-border;
        -webkit-transition: -webkit-transform 1s ease-in-out;
        transition: transform 1s ease-in-out;
        &:hover {
            -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
        }
    }
}

.hidden {
    display: none;
}

.outer-container {
    padding-top: $padding-medium;
    padding-bottom: $padding-medium;
    max-width: 80%;
    margin: 0 auto;
    p,
    h2 {
        text-align: center;
    }
}

.hero-container {
    display: flex;
    max-width: 80%;
    max-height: 500px;
    margin: 0 auto;
    padding: $padding-medium;
    img {
        width: 100%;
    }
}

a {
    color: #494C4E;
    &:hover .arrow-right {
        transform: translateX(5px);
        transition: all .25s ease;
        display: inline-block;
    }
    &:hover .arrow-left {
        transform: translateX(-5px);
        transition: all .25s ease;
        display: inline-block;
    }
}

.middle {
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%)
}

.project-card:hover .image {
    opacity: .1;
}

.project-card:hover .middle {
    opacity: 1;
}

.project-card {
    position: relative;
    background-color: #494C4E;
    display: flex;
    max-width: 80%;
    max-height: 500px;
    margin: 50px auto 0 auto;
    padding: $padding-small;
    img {
        width: 100%;
        max-height: 400px;
    }
    .cta-button {
        color: white;
    }
}

.arrow-right,
.arrow-left {
    transition: all .25s ease;
}

.cta-section {
    text-align: center;
    padding: $padding-large 0;
    border-top: 1px solid #F0EEEE;
    border-bottom: 1px solid #F0EEEE;
}

.cta-button {
    border-radius: 5px;
    text-align: center;
    border: 1px solid $orange;
    padding: $padding-small $padding-medium;
    display: inline-block;
    font-size: 1.5em;
    font-style: italic;
    margin: 0 $margin-small;
    min-width: 10em;
    transition: all .25s ease;
    &:hover {
        transform: scale(1.025);
        transition: all .1s ease;
    }
}

footer {
    text-align: center;
    padding: $padding-large 0;
}

